[package]
name = "jclass"
version = "0.1.3"
edition = "2021"
build = "build/build.rs"
description = "a simple lib for java class file parse or edit"
license = "Apache-2.0"
repository = "https://github.com/JavaGuard/jclass"

#[profile.release]
#debug = true

[dependencies]


[build-dependencies]
bindgen="0.70"